fix select alignment on datatable

--- a/assets/css/idx-leads.css
+++ b/assets/css/idx-leads.css
@@ -123,7 +123,8 @@ a:focus {
 }
 .dataTables_length.mdl-selectfield select {
 	margin: 0 0.25em;
-	font-size: 13px;
+	font-size: 12px;
+	top: -2px;
 }
 .dataTables_length.mdl-selectfield:after {
 	right: 3.3em;
